--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Hello HTML2</title>
 
     <link rel="stylesheet" href="index.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -33,7 +35,7 @@
             <div class="contents-lesson">
                 <h2>レッスン一覧</h2>
                 <ul>
-                    <li>HTML&nbsp;&amp;&nbsp;CSS</li>
+                    <li class="animate__animated animate__bounce">HTML&nbsp;&amp;&nbsp;CSS</li>
                     <li>PHP</li>
                     <li>Ruby</li>
                     <li>JavaScript</li>
